Finish with layouts

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,6 @@
-﻿<% provide(:title, 'Contacts') %>
-<h1>Contacts</h1>
-<a href="http://vk.com/f3oall"> Страничка в ВК </a>
+﻿<% provide(:title, 'Contact') %>
+<h1>Contact</h1>
+<p>
+  Contact Ruby on Rails Tutorial about the sample app at the
+  <a href="http://railstutorial.org/contact">contact page</a>.
+</p>
